--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+* {
+  font-family: initial;
+  font-size: 19px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Center the content of the body horizontally and vertically */
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.container {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  width: 290px;
+  text-align: center;
+  border: 10px solid rgb(72, 4, 4);
+  background: #320202;
+  border-radius: 15px;
+  padding: 6px;
+}
+
+input[type="text"] {
+  height: 55px;
+  width: 280px;
+  border-radius: 10px;
+  margin: 5px 0px 9px 0px;
+  background: #523434;
+  font-size: 25px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  border: 0px;
   color: white;
+  text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+.buttons {
+  /* Creating a grid layout with 4 columns and auto-sized rows */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Setting the grid position for the history button */
+#history {
+  grid-column: 1/3;
+  grid-row: 1;
+  background: rgb(225, 164, 164);
+}
+
+#result {
+  /* Setting the grid position for the result button */
+  grid-column: 1/5;
+  color: #262834;
+  background: rgb(225, 164, 164);
+  font-weight: bold;
+}
+
+#backspace {
+  color: #262834;
+  font-weight: bold;
+  background: rgb(225, 164, 164);
+}
+
+#clear {
+  color: #262834;
+  font-weight: bold;
+  background: rgb(225, 164, 164);
+}
+
+#clear:hover,
+#backspace:hover,
+#result:hover,
+#history:hover {
+  background-color: #956060;
+}
+
+button {
+  margin: 3px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: rgb(99, 47, 50);
+  color: white;
+  font-weight: 500;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  /* Removing the default outline for the focused or active elements */
+  outline: none;
+}
+
+.mainbtn {
+  background-color: #956060;
+  color: #262834;
+  font-weight: bold;
+}
+
+.mainbtn:hover {
+  background: rgb(225, 164, 164);
 }
