--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+
+body{
+  overflow: hidden;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+textarea{
+  resize: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-custom{
+  padding: 8%;
+  font-size: large;
+  width: 25%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.custom-container{
+  position:absolute;
+  top:20%;
+  left: 40%;
+  width: 20%;
 }
 
-.App-link {
-  color: #61dafb;
+
+.img{
+  width: 15%;
+  height: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#textarea{
+  text-align:end !important;
 }
