--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,67 @@
-
-body{
+body {
   overflow: hidden;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 
-textarea{
+
+textarea {
   resize: none;
 }
 
-.btn-custom{
-  padding: 8%;
+.btn-custom {
+  padding: 20px;
   font-size: large;
   width: 25%;
+  
 }
 
-.custom-container{
-  position:absolute;
-  top:20%;
-  left: 40%;
+.hist{
+  box-shadow: 0 1px 4px rgba(0,0,0,.28);
+    border-collapse: separate;
+    width: 448px;
+    height: 300px;
+    max-width: 70%;
+    box-sizing: border-box;
+    border-radius: 8px;
+    
+    position: absolute;
+    top: 11px;
+    left: -1px;
+    background-color: #c2c3c8;
+}
+
+.keypad{
+  min-width: 200px;
+}
+.custom-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 20%;
+  min-width: 200px; /* Set an appropriate value for max width */
+  transform: translate(-50%, -50%);
 }
 
-
-.img{
-  width: 15%;
-  height: 5%;
+.hist{
+  overflow-y: auto;
+  scroll-behavior: auto;
+}
+.hist_list{
+  
+  list-style: none;
 }
 
-#textarea{
-  text-align:end !important;
+.img {
+  width: 15px;
+  height: 15px;
+}
+
+.answer {
+  min-height: 30px;
+}
+
+#inputArea {
+  text-align: end !important;
+  min-height: 40px;
 }
